[package]
name = "wasmer-clif-backend"
version = "0.10.1"
description = "Wasmer runtime Cranelift compiler backend"
license = "MIT"
authors = ["The Wasmer Engineering Team <engineering@wasmer.io>"]
repository = "https://github.com/wasmerio/wasmer"
keywords = ["wasm", "webassembly", "compiler", "JIT", "AOT"]
categories = ["wasm"]
edition = "2018"
readme = "README.md"

[dependencies]
wasmer-runtime-core = { path = "../runtime-core", version = "0.10.1" }
#cranelift-native = { path = "../../../wasmer-cranelift/cranelift-native", version = "0.49.0" }
#cranelift-codegen = { path = "../../../wasmer-cranelift/cranelift-codegen", version = "0.49.0" }
#cranelift-entity = { path = "../../../wasmer-cranelift/cranelift-entity", version = "0.49.0" }
#cranelift-frontend = { package = "wasmer-clif-fork-frontend", path = "../../../wasmer-cranelift/cranelift-frontend", version = "0.49.0" }
#cranelift-wasm = { package = "wasmer-clif-fork-wasm", path = "../../../wasmer-cranelift/cranelift-wasm", version = "0.49.0" }
cranelift-native = { git = "https://github.com/wasmerio/cranelift", branch = "feature/wasmer-0-49-0", version = "0.49.0" }
cranelift-codegen = { git = "https://github.com/wasmerio/cranelift", branch = "feature/wasmer-0-49-0", version = "0.49.0" }
cranelift-entity = { git = "https://github.com/wasmerio/cranelift", branch = "feature/wasmer-0-49-0", version = "0.49.0" }
cranelift-frontend = { package = "wasmer-clif-fork-frontend", git = "https://github.com/wasmerio/cranelift", branch = "feature/wasmer-0-49-0", version = "0.49.0" }
cranelift-wasm = { package = "wasmer-clif-fork-wasm", git = "https://github.com/wasmerio/cranelift", branch = "feature/wasmer-0-49-0", version = "0.49.0" }
target-lexicon = "0.9"
wasmparser = "0.39.1"
byteorder = "1.3.2"
nix = "0.15.0"
libc = "0.2.60"
rayon = "1.1"

# Dependencies for caching.
[dependencies.serde]
version = "1.0"
features = ["rc"]
[dependencies.serde_derive]
version = "1.0"
[dependencies.serde_bytes]
version = "0.11"
[dependencies.serde-bench]
version = "0.0.7"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["errhandlingapi", "minwindef", "minwinbase", "winnt"] }
wasmer-win-exception-handler = { path = "../win-exception-handler", version = "0.10.1" }

[features]
debug = ["wasmer-runtime-core/debug"]
